test_regress/t/t_func_task_bad.out
%Error: t/t_func_task_bad.v:10:9: Cannot call a task/void-function as a function: 'a_task'
                                : ... note: In instance 't'
   10 |     if (a_task(1'b0)) $stop;   
      |         ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_func_task_bad.v:10:5: Logical operator IF expects a non-complex data type on the If.
                                : ... note: In instance 't'
   10 |     if (a_task(1'b0)) $stop;   
      |     ^~
%Error: Exiting due to
